--- a/vector.css
+++ b/vector.css
@@ -1,7 +1,7 @@
 .lea-grid-header {
-    background-color: #0000ff55;
+    background-color: #0000ffee;
 }
 
-.lea-grid-tile {
+.lea-grid-title {
     background-color: #0000ff55;
 }
