--- a/vector.css
+++ b/vector.css
@@ -9,6 +9,7 @@
 .lea-grid-content {
     align-items: center;
     display: flex;
+    border: solid 2px black;
 }
 
 .lea-grid-rowof1 {
@@ -39,4 +40,11 @@
 .lea-colours {
     background-color: #002147;
     color: #46db4b;
+}
+
+.lea-mdl-layout-01 {
+    border-radius: 10px;
+    padding: 5%;
+    text-align: center;
+    font-size: 14px;
 }
