--- a/vector.css
+++ b/vector.css
@@ -31,7 +31,13 @@
     display: flex;
 }
 
+.lea-grid-notthis {
+    background-color: #eee;
+}
 
+.lea-grid-this {
+    font-weight: 900;
+}
 
 .lea-grid-subject {
     font-weight: 700;
