--- a/vector.css
+++ b/vector.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+.theme-snap #snap-pm-header {
+    background-color: #4e41ff;
+}
+
 .lea-grid-title {
     background-color: #0000ffee;
 }
