--- a/vector.css
+++ b/vector.css
@@ -20,10 +20,12 @@
 .lea-grid-footer, .lea-grid-title {
     background-color: #0000ffee;
     color: #fff;
+    margin: 0;
 }
 
 .lea-grid-header {
     background-color: #0000ff55;
+    margin: 0;
 }
 
 .lea-grid-content {
@@ -31,6 +33,7 @@
     display: flex;
     border: solid 2px black;
     padding: 0 2px;
+    margin: 0;
 }
 
 .lea-grid-rowof1 {
