--- a/vector.css
+++ b/vector.css
@@ -18,7 +18,7 @@
 
 .lea-grid-footer, .lea-grid-title {
     background-color: #0000ffee;
-    color: #fff;
+    color: #eee;
     margin: 0;
     font-weight: 900;
 }
