--- a/vector.css
+++ b/vector.css
@@ -29,7 +29,7 @@
     align-items: center;
     display: flex;
     border: solid 2px black;
-    padding: 0 2px;
+    padding: 5px 2px;
     margin: 0;
 }
 
