--- a/vector.css
+++ b/vector.css
@@ -84,9 +84,16 @@
     color: #46db4b;
 }
 
-.lea-mdl-layout-01 {
+.lea-mdl-corecontent {
     border-radius: 10px;
     padding: 5%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.lea-mdl-additionalcontent {
+    border-radius: 5px;
+    padding: 2%;
     text-align: center;
     font-size: 14px;
 }
