--- a/vector.css
+++ b/vector.css
@@ -68,6 +68,11 @@
     text-align: right;
 }
 
+.lea-grid-hours-heading {
+    text-align: right;
+    font-weight: 700;
+}
+
 .lea-grid-credits {
     text-align: center;
 }
