--- a/vector.css
+++ b/vector.css
@@ -93,12 +93,23 @@
     border-radius: 10px;
     padding: 5%;
     text-align: center;
-    font-size: 16px;
+    font-size: 16pt;
+    letter-spacing: 2px;
+    font-weight: 900;
 }
 
 .lea-mdl-additionalcontent {
     border-radius: 5px;
     padding: 2%;
+    text-align: left;
+    font-size: 14pt;
+}
+
+.lea-mdl-knowledgecheck {
+    border-radius: 10px;
+    padding: 5%;
     text-align: center;
-    font-size: 14px;
+    font-size: 16pt;
+    letter-spacing: 1px;
+    font-weight: 900;
 }
