--- a/vector.css
+++ b/vector.css
@@ -6,23 +6,21 @@
 .lea-grid-title {
     text-align: center;
     padding: 20px 0;
-    border-radius: 10px 10px 0 0;
 }
 
 .lea-grid-footer {
     padding: 10px;
-    border-radius: 0 0 10px 10px;
 }
 
 .lea-grid-footer, .lea-grid-title {
-    background-color: #002147;
+    background-color: #0000ffee;
     color: #eee;
     margin: 0;
     font-weight: 900;
 }
 
 .lea-grid-header {
-    background-color: #00214755;
+    background-color: #0000ff55;
     margin: 0;
     text-align: center;
 }
@@ -70,7 +68,7 @@
     text-align: right;
 }
 
-.lea-grid-hours-heading {
+.lea-grid-hours-header {
     text-align: right;
     font-weight: 700;
 }
@@ -91,28 +89,23 @@
     color: #46db4b;
 }
 
+.lea-mdl-title {
+    border-radius: 10px;
+    padding: 5%;
+    text-align: center;
+    font-size: 16px;
+}
+
 .lea-mdl-corecontent {
     border-radius: 10px;
-    padding: 15px;
+    padding: 5%;
     text-align: center;
-    font-size: 20pt;
-    letter-spacing: 2px;
-    font-weight: 900;
-    margin: 20px 0 0 0;
+    font-size: 16px;
 }
 
 .lea-mdl-additionalcontent {
     border-radius: 5px;
-    padding: 5px;
-    text-align: left;
-    font-size: 14pt;
-}
-
-.lea-mdl-knowledgecheck {
-    border-radius: 10px;
-    padding: 10px;
-    text-align: left;
-    font-size: 16pt;
-    letter-spacing: 1px;
-    font-weight: 900;
+    padding: 2%;
+    text-align: center;
+    font-size: 14px;
 }
