--- a/vector.css
+++ b/vector.css
@@ -90,10 +90,10 @@
 }
 
 .lea-mdl-title {
-    border-radius: 10px;
-    padding: 5%;
+    border-radius: 15px;
+    padding: 10px;
     text-align: center;
-    font-size: 16px;
+    font-size: 24px;
 }
 
 .lea-mdl-corecontent {
