--- a/vector.css
+++ b/vector.css
@@ -96,6 +96,10 @@
     font-size: 24px;
 }
 
+.lea-mdl-ytvideo {
+    text-align: center;
+}
+
 .lea-mdl-corecontent {
     border-radius: 10px;
     padding: 5%;
