--- a/vector.css
+++ b/vector.css
@@ -1,8 +1,9 @@
 
 
 
-#module-651, #module-652  {padding: 0;}
+#module-651 {padding: 0;}
 
+#module-652 {padding: 0;}
 
 .lea-grid {
     margin: 0;
