--- a/vector.css
+++ b/vector.css
@@ -136,3 +136,18 @@
     margin: 0 10px;
 }
 
+.lea-vect-modulehead {
+    font-size: 24pt;
+}
+
+.lea-vect-unithead {
+    font-size: 20pt;
+}
+
+.lea-vect-linktext {
+    font-size: 16pt;
+}
+
+.lea-vect-head01 {
+    font-size: 20pt;
+}
