--- a/vector.css
+++ b/vector.css
@@ -161,7 +161,7 @@
     color: #fff;
 }
 
-#.lea-vect-head-centre-01 {
+.lea-vect-head-centre-01 {
     font-size: 20pt;
     padding: 10px;
     border-radius: 5px;
