--- a/vector.css
+++ b/vector.css
@@ -4,17 +4,16 @@
 .lea-grid {
     margin: 10px;
     padding: 0;
+    border-radius: 10px;
 }
 
 .lea-grid-title {
     text-align: center;
     padding: 20px 0;
-    border-radius: 10px 10px 0 0;
 }
 
 .lea-grid-footer {
     padding: 10px;
-    border-radius: 0 0 10px 10px;
 }
 
 .lea-grid-footer, .lea-grid-title {
