--- a/vector.css
+++ b/vector.css
@@ -1,10 +1,13 @@
-
+* {
+    margin: 0;
+    padding: 0;
+}
 
 
 .lea-grid {
     margin: 0;
     padding: 0;
-    border-radius: 10px;
+    border-radius: 0;
     border: 1px solid #002147;
 }
 
