--- a/vector.css
+++ b/vector.css
@@ -157,6 +157,10 @@
     padding: 20px 0 0 0;
 }
 
+.lea-grid-moduletotals {
+    font-weight: 700;
+}
+
 .lea-vect-unithead {
     font-size: 20pt;
     padding: 10px;
