--- a/vector.css
+++ b/vector.css
@@ -161,6 +161,10 @@
     font-weight: 700;
 }
 
+.lea-grid-programmetotals {
+    font-weight: 700;
+}
+
 .lea-vect-unithead {
     font-size: 20pt;
     padding: 10px;
