--- a/vector.css
+++ b/vector.css
@@ -167,7 +167,7 @@
 
 .lea-vect-revision{
     padding: 10px;
-    background-color #005599ee;
+    background-color: #005599ee;
 }
 
 .lea-vect-unithead {
