--- a/vector.css
+++ b/vector.css
@@ -200,3 +200,9 @@
     border-radius: 5px;
     text-align: center;
 }
+
+.lea-vect-head-topics {
+    font-size: 150%;
+    padding: 10px;
+    border-radius: 5px;
+}
