--- a/vector.css
+++ b/vector.css
@@ -207,6 +207,7 @@
     border-radius: 5px;
     text-align: center;
     background-color: #002147;
+    color: #fff;
 }
 
 .lea-vect-head-topics {
