--- a/vector.css
+++ b/vector.css
@@ -208,6 +208,7 @@
     text-align: center;
     background-color: #002147;
     color: #fff;
+    margin: 0 0 20px 0;
 }
 
 .lea-vect-head-topics {
