--- a/vector.css
+++ b/vector.css
@@ -153,6 +153,12 @@
     border-radius: 10px;
 }
 
+.lea-vect-revision-ytvideo {
+    text-align: center;
+    margin: 0 10px 50px 10px;
+    border-radius: 10px;
+}
+
 .lea-vect-modulehead {
     font-size: 24pt;
     padding: 20px 0 0 0;
