--- a/vector.css
+++ b/vector.css
@@ -155,7 +155,7 @@
 
 .lea-vect-revision-ytvideo {
     text-align: center;
-    margin: 0 10px 50px 10px;
+    margin: 50px 10px 50px 10px;
     border-radius: 10px;
 }
 
