--- a/vector.css
+++ b/vector.css
@@ -236,8 +236,10 @@
     border: 2px solid #ee2147;
     background-color: #002147;
     margin: 0 0 30px 0;
-    color: #ff3f47dd;
+    color: #ff4f5fdd;
     padding: 10px;
+    letter-spacing: 1.5px;
+    font-weight: 600;
 }
 
 .lea-vect-unit-complete {
