--- a/vector.css
+++ b/vector.css
@@ -261,6 +261,30 @@
     font-weight: 600;
 }
 
+.lea-vect-head-checklist {
+    font-size: 150%;
+    border-radius: 10px;
+    border: 2px solid #ee2147;
+    background-color: #002147;
+    margin: 0 0 30px 0;
+    color: #ff4f5fdd;
+    padding: 10px;
+    letter-spacing: 1.5px;
+    font-weight: 600;
+}
+
+.lea-vect-head-certiciate {
+    font-size: 150%;
+    border-radius: 10px;
+    border: 2px solid #ee2147;
+    background-color: #002147;
+    margin: 0 0 30px 0;
+    color: #ff4f5fdd;
+    padding: 10px;
+    letter-spacing: 1.5px;
+    font-weight: 600;
+}
+
 .lea-vect-unit-complete {
     font-size: 150%;
     padding: 10px;
