--- a/vector.css
+++ b/vector.css
@@ -264,24 +264,21 @@
 .lea-vect-head-checklist {
     font-size: 150%;
     border-radius: 10px;
-    border: 2px solid #ee2147;
     background-color: #002147;
     margin: 0 0 30px 0;
-    color: #ff4f5fdd;
+    color: #fff;
     padding: 10px;
-    letter-spacing: 1.5px;
     font-weight: 600;
 }
 
 .lea-vect-head-certificate {
     font-size: 150%;
     border-radius: 10px;
-    border: 2px solid #ee2147;
+    border: 2px solid #000;
     background-color: #002147;
     margin: 0 0 30px 0;
-    color: #ff4f5fdd;
+    color: #fff;
     padding: 10px;
-    letter-spacing: 1.5px;
     font-weight: 600;
 }
 
