--- a/vector.css
+++ b/vector.css
@@ -145,6 +145,7 @@
     padding: 10px;
     text-align: center;
     font-size: 24pt;
+    background-image: url(https://leadingedgeaviation.com/wp-content/uploads/lea-a320-simulator-hire-hero2.jpg);
 }
 
 .lea-mdl-ytvideo {
