--- a/vector.css
+++ b/vector.css
@@ -233,7 +233,13 @@
     background-color: #002147;
     color: #fff;
     margin: 0 0 20px 0;
+    
+}
+
+.lea-mdl-bground {
     background-image: url('https://leadingedgeaviation.com/wp-content/uploads/lea-a320-simulator-hire-hero2.jpg');
+    background-repeat: no-repeat;
+    opacity: 0.5;
 }
 
 .lea-vect-head-topics {
