--- a/vector.css
+++ b/vector.css
@@ -183,19 +183,22 @@
 }
 
 .lea-vect-unithead {
-    font-size: 130%;
+    font-size: 150%;
     padding: 10px;
     border-radius: 5px;
+    color: #fff;
+    background-color: #002147aa;
+    letter-spacing: 2px;
 }
 
 .lea-vect-unitbground {
     background-image: url('https://vle.leadingedgeaviation.com/pluginfile.php/1/theme_tltitan/headerdefaultimage/1636042074/header.jpg');
     background-repeat: no-repeat;
-    opacity: 0.9;
-    padding: 10px;
+    padding: 20px;
     margin: 0 0 20px 0;
     background-size: cover;
     margin: 20px 0 0 0;
+    border-radius: 5px;
 }
 
 
