--- a/vector.css
+++ b/vector.css
@@ -213,7 +213,6 @@
 .lea-vect-unithead-left,  .lea-vect-unithead-right{
     font-size: 140%;
     padding: 20px;
-    border-radius: 5px;
     letter-spacing: 2px;
     font-weight: 700;
 }
@@ -221,12 +220,14 @@
 .lea-vect-unithead-left {
     color: #fff;
     background-image: linear-gradient(to right, #002147ff,#002147dd );
+    border-radius: 5px 0px 0px 5px;
 }
 
 .lea-vect-unithead-right{
     color: #002147;
     background-image: linear-gradient(to right,#002147dd,#00214700 );
     text-align: right;
+    border-radius: 0 5px 5px 0;
  }
 
 .lea-vect-unitbground {
