--- a/vector.css
+++ b/vector.css
@@ -150,8 +150,10 @@
 
 .lea-mdl-ytvideo {
     text-align: center;
-    margin: 0 10px 50px 10px;
+    margin: 0 0 20px 0px;
     border-radius: 10px;
+    border: 1px solid #002147;
+    padding: 20px;
 }
 
 .lea-vect-revision-ytvideo {
@@ -299,7 +301,7 @@
     background-repeat: no-repeat;
     opacity: 0.9;
     padding: 10px;
-    margin: 0 0 20px 0;
+    margin: 0;
     background-size: cover;
 }
 
