--- a/vector.css
+++ b/vector.css
@@ -151,7 +151,7 @@
 .lea-mdl-ytvideo {
     text-align: center;
     margin: 0 0 20px 0px;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     border: 1px solid #002147;
     padding: 20px;
 }
