--- a/vector.css
+++ b/vector.css
@@ -258,6 +258,21 @@
     margin: 10px 0;
 }
 
+.lea-vect-link {
+    font-size: 100%;
+    border: 1px solid #002147;
+    border-radius: 5px;
+    background-color: #00214722;
+    margin: 0 0 20px 0;
+    color: #000000dd;
+}
+
+.lea-vect-link i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .lea-vect-linktext {
     font-size: 100%;
     border: 1px solid #002147;
