--- a/vector.css
+++ b/vector.css
@@ -260,10 +260,7 @@
 
 .lea-vect-link {
     font-size: 100%;
-    border: 1px solid #002147;
     border-radius: 5px;
-    background-color: #00214722;
-    margin: 0 0 20px 0;
     color: #000000dd;
 }
 
@@ -271,6 +268,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 200%;
 }
 
 .lea-vect-linktext {
