--- a/vector.css
+++ b/vector.css
@@ -263,6 +263,7 @@
     border-radius: 5px;
     color: #000000dd;
     margin: 0 0 20px 0;
+    border: 1px solid #002147;
 }
 
 .lea-vect-link i {
@@ -271,15 +272,14 @@
     justify-content: center;
     font-size: 200%;
     height: 100%;
+    background-color: #00214722;
 }
 
 .lea-vect-linktext {
     font-size: 100%;
-    border: 1px solid #002147;
     border-radius: 5px;
     background-color: #00214722;
     margin: 0;
-    color: #000000dd;
 }
 
 .lea-vect-head-left-01 {
