--- a/vector.css
+++ b/vector.css
@@ -282,7 +282,7 @@
 
 .lea-vect-linktext {
     font-size: 100%;
-    border-radius: 5px;
+    border-radius: 0 5px 5px 0;
     background-color: #00214722;
     margin: 0;
 }
