--- a/vector.css
+++ b/vector.css
@@ -213,7 +213,7 @@
 }
 
 .lea-vect-readingbground {
-    background-image: url('https://github.com/stephenjclarke/leadingedgevle/blob/main/images/iPad_Reading.jpg');
+    background-image: url('https://stephenjclarke.github.io/leadingedgevle/images/iPad_Reading.jpg');
     background-repeat: no-repeat;
     padding: 0px;
     margin: 0 0 20px 0;
