--- a/vector.css
+++ b/vector.css
@@ -268,6 +268,7 @@
     padding: 0px;
     margin: 0 0 20px 0;
     background-size: fit;
+    background-position: right;
     margin: 20px 0 0 0;
     border-radius: 5px;
 }
