--- a/vector.css
+++ b/vector.css
@@ -114,47 +114,7 @@
    color: #46db4b;
 }
 
-.lea-mdl-corecontent {
-    border-radius: 10px;
-    padding: 15px;
-    text-align: center;
-    font-size: 20pt;
-    letter-spacing: 2px;
-    font-weight: 900;
-    margin: 20px 0 0 0;
-}
 
-.lea-mdl-additionalcontent {
-    border-radius: 5px;
-    padding: 5px;
-    text-align: left;
-    font-size: 14pt;
-}
-
-.lea-mdl-knowledgecheck {
-    border-radius: 10px;
-    padding: 10px;
-    text-align: left;
-    font-size: 16pt;
-    letter-spacing: 1px;
-    font-weight: 900;
-}
-
-.lea-mdl-title {
-    border-radius: 15px;
-    padding: 10px;
-    text-align: center;
-    font-size: 24pt;
-    background-image: url(https://leadingedgeaviation.com/wp-content/uploads/lea-a320-simulator-hire-hero2.jpg);
-}
-
-.lea-mdl-ytvideo {
-    text-align: center;
-    margin: 0 0 20px 0px;
-    border-radius: 0 0 10px 10px;
-    border: 1px solid #002147;
-    padding: 20px;
-}
 
 .lea-vect-revision-ytvideo {
     text-align: center;
@@ -321,15 +281,6 @@
     
 }
 
-.lea-mdl-bground {
-    background-image: url('https://leadingedgeaviation.com/wp-content/uploads/LEA-PCL-Prize-3.jpg');
-    background-repeat: no-repeat;
-    opacity: 0.8;
-    padding: 5px;
-    background-size: cover;
-    margin-top: 20px;
-}
-
 .lea-vect-head-centre-bground {
     background-image: url('https://leadingedgeaviation.com/wp-content/uploads/LEA-PCL-Prize-3.jpg');
     background-repeat: no-repeat;
@@ -403,4 +354,66 @@
     color: #fff;
     margin: 0 0 20px 0;
 }
+
+/* Start of LEA Moodle Formatting */
+.lea-mdl-corecontent {
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    font-size: 20pt;
+    letter-spacing: 2px;
+    font-weight: 900;
+    margin: 20px 0 0 0;
+}
+
+.lea-mdl-additionalcontent {
+    border-radius: 5px;
+    padding: 5px;
+    text-align: left;
+    font-size: 14pt;
+}
+
+.lea-mdl-knowledgecheck {
+    border-radius: 10px;
+    padding: 10px;
+    text-align: left;
+    font-size: 16pt;
+    letter-spacing: 1px;
+    font-weight: 900;
+}
+
+.lea-mdl-title {
+    border-radius: 15px;
+    padding: 10px;
+    text-align: center;
+    font-size: 24pt;
+    background-image: url(https://leadingedgeaviation.com/wp-content/uploads/lea-a320-simulator-hire-hero2.jpg);
+}
+
+.lea-mdl-ytvideo {
+    text-align: center;
+    margin: 0 0 20px 0px;
+    border-radius: 0 0 10px 10px;
+    border: 1px solid #002147;
+    padding: 20px;
+}
+
+.lea-mdl-bground {
+    background-image: url('https://leadingedgeaviation.com/wp-content/uploads/LEA-PCL-Prize-3.jpg');
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    padding: 5px;
+    background-size: cover;
+    margin-top: 20px;
+}
+
+.lea-mdl-heading-01 {
+    border-radius: 15px;
+    padding: 10px;
+    text-align: center;
+    font-size: 150%;
+}
+
+
+/* End of LEA Moodle CS*/
 
