--- a/vector.css
+++ b/vector.css
@@ -416,10 +416,9 @@
 }
 
 .lea-mdl-text-01-c {
-    border-radius: 15px;
     padding: 10px;
     text-align: center;
-    font-size: 100%;
+    font-size: 14px;
     color: #fff;
 }
 
