--- a/vector.css
+++ b/vector.css
@@ -3,13 +3,13 @@
     padding: 0;
 }
 
-.dropdown-item a:hover {
+/* .dropdown-item a:hover {
     color: #000;
 }
 
 .row{
     margin: 0;
-}
+} */
 
 .lea-fa {
     margin: 5px 10px;
