--- a/vector.css
+++ b/vector.css
@@ -3,10 +3,11 @@
     padding: 0;
 }
 
-/* .dropdown-item a:hover {
+.dropdown-item a:hover {
     color: #000;
 }
 
+/*
 .row{
     margin: 0;
 } */
