--- a/vector.css
+++ b/vector.css
@@ -8,6 +8,13 @@
     margin: 0;
 } */
 
+
+:root {
+    --lea-blue: #002147;
+    --white: #ffffff;
+  }
+
+
 .lea-fa {
     margin: 5px 10px;
     font-weight: 800;
@@ -18,7 +25,7 @@
     margin: 0 0 10px 0;
     padding: 10px;
     border-radius: 0;
-    border: 1px solid #002147;
+    border: 1px solid var(--lea-blue);
 }
 
 .lea-grid-title {
