--- a/vector.css
+++ b/vector.css
@@ -10,7 +10,7 @@
 :root {
 /* LEA Brand Colours */
     --lea-oxford-blue: #002147;
-    --lea-oxford-blue2: rgb(00,21,70);
+    --lea-oxford-blue2: 00,21,70;
     --lea-lime: #46db4b;
     --lea-engine-grey: #e2e2e2;
     --lea-pale-blue: #bacded;
