--- a/vector.css
+++ b/vector.css
@@ -23,6 +23,14 @@
     width: 100%;
 }
 
+.lea-vect-row div{
+    float: left;
+}
+
+.lea-vect-col-4 {
+    width: 25%
+}
+
 .lea-vect-fa {
     margin: 5px 10px;
     font-weight: 800;
