--- a/vector.css
+++ b/vector.css
@@ -23,12 +23,20 @@
     width: 100%;
 }
 
-.lea-vect-row div{
+.lea-vect-row div {
     float: left;
 }
 
 .lea-vect-col-4 {
-    width: 25%
+    width: 33.33333%;
+}
+
+.lea-vect-col-3 {
+    width: 25%;
+}
+
+.lea-vect-col-2 {
+    width: 16.66667%;
 }
 
 .lea-vect-fa {
