--- a/vector.css
+++ b/vector.css
@@ -59,6 +59,8 @@
 .lea-vect-grid-title {
     text-align: center;
     padding: 20px 0;
+    background-color: var(--lea-vect-oxford-blue);
+    color: var(--lea-vect-white);
 }
 
 .lea-vect-grid-footer {
